		- Smarter object colours (unique colours for can of grease - bright green and tinning kit - orange).
		- Follow guidelines for monster color assignment (based on work by "L" - Leon Arnott)
		- Bear trap is no longer ineffective on diagonals
		- Better default config file - MSGTYPE and MONSTERCOLOR are mentioned, obvious MSGTYPE settings are appplied.
	* Grinding elimination
		- Chance of wand wresting raised to 1/11
		- Carrying digging tools to shop is no longer blocked
		- Luring wraiths from graveyards is now pointless - undead creatures are as likely to leave corpse on graveyard as on normal levels (reduced chance for normal levels, raised for graveyards)
		- Autoidentify BUC of products from BUC identified item generator (tinning kit, horn of plenty).
		- Fire traps removed from Plane of Fire
	* Merging in the best part of SporkHack absent from UnNetHack
		- Allow more than one special room per level in the DoD
		- Touch of death changed - from SporkHack. Instadeath removed, antimagic is not fully protecting.
		- Fire resistance removed from master lich and arch-lich as leftover from when you had to be fire resistant to go into Gehennom at all
		- Sacrifice gifts from SporkHack - you may get also armor, normal weapons (fixed and at +3 to +5)
		- Shopkeepers advertise their shops
		- Destroy armor is now noticeable
		- Throwing eggs at gnomes will make them scared (Oz reference)
		- Nazgul scream attack added
		- Now anybody may tame monkeys and apes with bananas
		- If dipping into greasy potion produced no results, grease the dipped object
		- Effects of anti-magic field should be now noticeable and it will affect also monsters
	* Object generation modified 
		- lowered amount of death drops
		- more objects on the floor
		- generated objects may be eroded or fixed
		- reduced amount of food on lower levels
	* Rework amnesia - mind flayers now destroy spells and skills