@@ -49,6 +49,7 @@
 		- Follow guidelines for monster color assignment (based on work by "L" - Leon Arnott)
 		- Bear trap is no longer ineffective on diagonals
 		- Better default config file - MSGTYPE and MONSTERCOLOR are mentioned, obvious MSGTYPE settings are appplied.
+		- Smarter warning player before walking into known traps
 	* Grinding elimination
 		- Chance of wand wresting raised to 1/11
 		- Carrying digging tools to shop is no longer blocked
